--- a/index.html
+++ b/index.html
@@ -287,19 +287,14 @@
                                             <ul>
                                                 <li class="wow fadeInUp animated">
                                                     <h4>
-                                                Android Software Engineer
+                                                Android Engineer
                                              </h4>
                                                     <small>
                                              <span class="md-account-balance"></span> Screen Interaction
                                              </small>
                                                     <small>
-                                             <span class="md-today"></span> Feb 2015-Jun 2015
+                                             <span class="md-today"></span> Current
                                              </small>
-                                                    <!--
-                                                    <p>
-                                                        TODO Job description Screen Interaction
-                                                    </p>
--->
                                                 </li>
                                                 <li class="wow fadeInUp animated">
                                                     <h4>
