--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                                                         Scrum
                                                     </p>
                                                     <div class="progress">
-                                                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                                            <span class="sr-only">60% Complete</span>
+                                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                                            <span class="sr-only">90%</span>
                                                         </div>
                                                     </div>
                                                 </li>
@@ -184,18 +184,18 @@
                                                         Java
                                                     </p>
                                                     <div class="progress">
-                                                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                                                            <span class="sr-only">60% Complete</span>
+                                                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                                                            <span class="sr-only">75%</span>
                                                         </div>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <p>
-                                                        Android Development
+                                                        Android
                                                     </p>
                                                     <div class="progress">
-                                                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                                            <span class="sr-only">60% Complete</span>
+                                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                                            <span class="sr-only">90%</span>
                                                         </div>
                                                     </div>
                                                 </li>
@@ -205,16 +205,6 @@
                                                     </p>
                                                     <div class="progress">
                                                         <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-                                                            <span class="sr-only">60% Complete</span>
-                                                        </div>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                    <p>
-                                                        JUnit
-                                                    </p>
-                                                    <div class="progress">
-                                                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
                                                             <span class="sr-only">60% Complete</span>
                                                         </div>
                                                     </div>
