Rich content. Changed statement

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                            Jorge Antonio Diaz-Benito Soriano
                         </h1>
                         <h4 class="wow slideInUp animated">
-                           Agile Android Engineer
+                           Certified Scrum Master, Android Engineer
                         </h4>
                     </div>
                 </div>
@@ -277,20 +277,20 @@
                                             <ul>
                                                 <li class="wow fadeInUp animated">
                                                     <h4>
-                                                Android Software Engineer
+                                                Android Engineer
                                              </h4>
                                                     <small>
                                              <span class="md-account-balance"></span> Screen Interaction
                                              </small>
                                                     <small>
-                                             <span class="md-today"></span> Feb 2015-Jun 2015
+                                             <span class="md-today"></span> Aug 2015-Present
                                              </small>
-                                                    <!--
                                                     <p>
-                                                        TODO Job description Screen Interaction
+                                                        Developer of the Ericsson-owned Android tool suite for Mobile Connect.
                                                     </p>
--->
                                                 </li>
+                                                <iframe src="https://www.youtube.com/embed/PzF95josTgQ" frameborder="0" allowfullscreen width="425" height="355"></iframe>
+                                                <li class="wow fadeInUp animated"></li>
                                                 <li class="wow fadeInUp animated">
                                                     <h4>
                                                 Master Thesis student, Agile Process Improvement
@@ -305,6 +305,8 @@
                                                         Analysis of communication practices among teams to elaborate and evaluate improvements using a quasi-experimental approach.
                                                     </p>
                                                 </li>
+                                                <iframe src="//www.slideshare.net/slideshow/embed_code/key/INhXGUVOaydYEj" width="425" height="355" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+                                                <li class="wow fadeInUp animated"></li>
                                                 <li class="wow fadeInUp animated">
                                                     <h4>
                                                 Teaching Assistant
