--- a/coverletter.html
+++ b/coverletter.html
@@ -79,7 +79,7 @@
                         Jorge Antonio Diaz-Benito Soriano
                      </h1>
                         <h4 class="wow slideInUp animated">
-                        Agile Android Engineer
+                        Certified Scrum Master, Android Engineer
                      </h4>
                     </div>
                 </div>
