CL is now generic

--- a/coverletter.html
+++ b/coverletter.html
@@ -119,7 +119,7 @@
                                     On the desktop side, I have developed two distributed suites using JS, PHP, HTML5 and Java, and some years ago I managed to break through the WhatsApp communication protocol and wrote a Java desktop client out of it.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    As for development support tools, I have experience with both SVN and Git, Mockito and JUnit in what refers to testing, and Travis for CI. I believe this and my curiosity and fast-learning skills make me a good match for <b>TODO COMPANY NAME</b>. Hopefully you will agree! Please do not hesitate to contact me back for any questions or further talk.
+                                    As for development support tools, I have experience with both SVN and Git, Mockito and JUnit in what refers to testing, and Travis for CI. I believe this and my curiosity and fast-learning skills make me a good match. Hopefully you will agree! Please do not hesitate to contact me back for any questions or further talk.
                                 </p>
                                 <h5 class="wow fadeInUp animated">
                               <strong>
