--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                                                         Scrum
                                                     </p>
                                                     <div class="progress">
-                                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                                            <span class="sr-only">90%</span>
+                                                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
+                                                            <span class="sr-only">100%</span>
                                                         </div>
                                                     </div>
                                                 </li>
@@ -184,8 +184,8 @@
                                                         Java
                                                     </p>
                                                     <div class="progress">
-                                                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-                                                            <span class="sr-only">75%</span>
+                                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                                            <span class="sr-only">90%</span>
                                                         </div>
                                                     </div>
                                                 </li>
@@ -194,8 +194,8 @@
                                                         Android
                                                     </p>
                                                     <div class="progress">
-                                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                                            <span class="sr-only">90%</span>
+                                                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+                                                            <span class="sr-only">95%</span>
                                                         </div>
                                                     </div>
                                                 </li>
@@ -257,88 +257,7 @@
                                         </div>
                                     </div>
                                     <!-- End language -->
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End left card -->
-                        <!-- Start right card -->
-                        <div class="right-content-area">
-                            <div class="col-md-6">
-                                <div class="row">
-                                    <!-- Start work -->
-                                    <div class="col-md-12">
-                                        <div class="work card wow slideInUp animated">
-                                            <span>
-                                       <i class="md-work icons pull-right wow zoomIn animated animated" data-wow-delay="1s" data-wow-duration="1s" style="visibility: visible;"></i>
-                                       </span>
-                                            <h1>
-                                          Work Experience
-                                       </h1>
-                                            <ul>
-                                                <li class="wow fadeInUp animated">
-                                                    <h4>
-                                                Android Engineer
-                                             </h4>
-                                                    <small>
-                                             <span class="md-account-balance"></span> Screen Interaction
-                                             </small>
-                                                    <small>
-                                             <span class="md-today"></span> Aug 2015-Present
-                                             </small>
-                                                    <p>
-                                                        Developer of the Ericsson-owned Android tool suite for Mobile Connect.
-                                                    </p>
-                                                </li>
-                                                <iframe src="https://www.youtube.com/embed/PzF95josTgQ" frameborder="0" allowfullscreen width="425" height="355"></iframe>
-                                                <li class="wow fadeInUp animated"></li>
-                                                <li class="wow fadeInUp animated">
-                                                    <h4>
-                                                Master Thesis student, Agile Process Improvement
-                                             </h4>
-                                                    <small>
-                                             <span class="md-account-balance"></span> Ericsson AB
-                                             </small>
-                                                    <small>
-                                             <span class="md-today"></span> Feb 2015-Jun 2015
-                                             </small>
-                                                    <p>
-                                                        Analysis of communication practices among teams to elaborate and evaluate improvements using a quasi-experimental approach.
-                                                    </p>
-                                                </li>
-                                                <iframe src="//www.slideshare.net/slideshow/embed_code/key/INhXGUVOaydYEj" width="425" height="355" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
-                                                <li class="wow fadeInUp animated"></li>
-                                                <li class="wow fadeInUp animated">
-                                                    <h4>
-                                                Teaching Assistant
-                                             </h4>
-                                                    <small>
-                                             <span class="md-account-balance"></span> Chalmers University of Technology
-                                             </small>
-                                                    <small>
-                                             <span class="md-today"></span> Nov 2014-Jan 2015
-                                             </small>
-                                                    <p>
-                                                        Exam and lab correction, lab supervision and general student assistance.
-                                                    </p>
-                                                </li>
-                                                <li class="wow fadeInUp animated">
-                                                    <h4>
-                                                Intern software engineer
-                                             </h4>
-                                                    <small>
-                                             <span class="md-account-balance"></span> Aron Multimedia
-                                             </small>
-                                                    <small>
-                                             <span class="md-today"></span> Jun 2012-Oct 2012
-                                             </small>
-                                                    <p>
-                                                        On-my-own development (including testing and deployment) of a distributed, Java-based digital signage software suite. The back-end is based on Java and PHP while the adverts are shown on previously deployed HTML5 webpages using a JS player.
-                                                    </p>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <!-- End work -->
+
                                     <!-- Start education -->
                                     <div class="col-md-12">
                                         <div class="education card wow slideInUp animated">
@@ -385,6 +304,104 @@
                             </div>
                         </div>
                         <!-- End left card -->
+                        <!-- Start right card -->
+                        <div class="right-content-area">
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <!-- Start work -->
+                                    <div class="col-md-12">
+                                        <div class="work card wow slideInUp animated">
+                                            <span>
+                                       <i class="md-work icons pull-right wow zoomIn animated animated" data-wow-delay="1s" data-wow-duration="1s" style="visibility: visible;"></i>
+                                       </span>
+                                            <h1>
+                                          Work Experience
+                                       </h1>
+                                            <ul>
+                                                <li class="wow fadeInUp animated">
+                                                    <h4>
+                                                Game Developer
+                                             </h4>
+                                                    <small>
+                                             <span class="md-account-balance"></span> FEO Media
+                                             </small>
+                                                    <small>
+                                             <span class="md-today"></span> Sep 2015-Present
+                                             </small>
+                                                    <p>
+
+                                                    </p>
+                                                </li>
+                                                <li class="wow fadeInUp animated"></li>
+                                                <li class="wow fadeInUp animated">
+                                                    <li class="wow fadeInUp animated">
+                                                        <h4>
+                                                Android Engineer
+                                             </h4>
+                                                        <small>
+                                             <span class="md-account-balance"></span> Screen Interaction
+                                             </small>
+                                                        <small>
+                                             <span class="md-today"></span> Aug 2015-Present
+                                             </small>
+                                                        <p>
+                                                            Developer of the Ericsson-owned Android tool suite for Mobile Connect.
+                                                        </p>
+                                                    </li>
+                                                    <iframe src="https://www.youtube.com/embed/PzF95josTgQ" frameborder="0" allowfullscreen width="425" height="355"></iframe>
+                                                    <li class="wow fadeInUp animated"></li>
+                                                    <li class="wow fadeInUp animated">
+                                                        <h4>
+                                                Master Thesis student, Agile Process Improvement
+                                             </h4>
+                                                        <small>
+                                             <span class="md-account-balance"></span> Ericsson AB
+                                             </small>
+                                                        <small>
+                                             <span class="md-today"></span> Feb 2015-Jun 2015
+                                             </small>
+                                                        <p>
+                                                            Analysis of communication practices among teams to elaborate and evaluate improvements using a quasi-experimental approach.
+                                                        </p>
+                                                    </li>
+                                                    <iframe src="//www.slideshare.net/slideshow/embed_code/key/INhXGUVOaydYEj" width="425" height="355" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+                                                    <li class="wow fadeInUp animated"></li>
+                                                    <li class="wow fadeInUp animated">
+                                                        <h4>
+                                                Teaching Assistant
+                                             </h4>
+                                                        <small>
+                                             <span class="md-account-balance"></span> Chalmers University of Technology
+                                             </small>
+                                                        <small>
+                                             <span class="md-today"></span> Nov 2014-Jan 2015
+                                             </small>
+                                                        <p>
+                                                            Exam and lab correction, lab supervision and general student assistance.
+                                                        </p>
+                                                    </li>
+                                                    <li class="wow fadeInUp animated">
+                                                        <h4>
+                                                Intern software engineer
+                                             </h4>
+                                                        <small>
+                                             <span class="md-account-balance"></span> Aron Multimedia
+                                             </small>
+                                                        <small>
+                                             <span class="md-today"></span> Jun 2012-Oct 2012
+                                             </small>
+                                                        <p>
+                                                            On-my-own development (including testing and deployment) of a distributed, Java-based digital signage software suite. The back-end is based on Java and PHP while the adverts are shown on previously deployed HTML5 webpages using a JS player.
+                                                        </p>
+                                                    </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <!-- End work -->
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End right card -->
                     </div>
                 </div>
             </div>
