--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                                              <span class="md-today"></span> Sep 2015-Present
                                              </small>
                                                     <p>
-                                                        Developer for Quizkampen for Android.
+                                                        Scrum Master @ Native Team, Developer for Quizkampen for Android.
                                                     </p>
                                                 </li>
                                                 <img src="https://lh5.ggpht.com/mgE-nP4l5vbzkeT6rrB-qZeMTz2JwJFchxsCOwcOZm39QE6CpvqhyjgGuImP0Sg5Gco=w300"></iframe>
