--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                                             <ul>
                                                 <li class="wow fadeInUp animated">
                                                     <h4>
-                                                Game Developer
+                                                Scrum Master & Android Engineer
                                              </h4>
                                                     <small>
                                              <span class="md-account-balance"></span> FEO Media
@@ -329,7 +329,7 @@
                                              <span class="md-today"></span> Sep 2015-Present
                                              </small>
                                                     <p>
-                                                        Scrum Master @ Native Team, Developer for Quizkampen for Android.
+                                                        Scrum Master @ Native Team and developer responsible for Quizkampen for Android.
                                                     </p>
                                                 </li>
                                                 <img src="https://lh5.ggpht.com/mgE-nP4l5vbzkeT6rrB-qZeMTz2JwJFchxsCOwcOZm39QE6CpvqhyjgGuImP0Sg5Gco=w300"></iframe>
