--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                              </small>
                                                     <p>
                                                         Scrum Master, Native Team.
-                                                        Responsible for Quizkampen for Android.
+                                                        Responsible for Quizkampen and Pixduel for Android.
                                                     </p>
                                                 </li>
                                                 <img src="https://lh5.ggpht.com/mgE-nP4l5vbzkeT6rrB-qZeMTz2JwJFchxsCOwcOZm39QE6CpvqhyjgGuImP0Sg5Gco=w300"></iframe>
