--- a/coverletter.html
+++ b/coverletter.html
@@ -79,7 +79,7 @@
                         Jorge Antonio Diaz-Benito Soriano
                      </h1>
                         <h4 class="wow slideInUp animated">
-                        Certified Scrum Master, Android Engineer
+                        Android Engineer
                      </h4>
                     </div>
                 </div>
@@ -106,26 +106,26 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="wow fadeInUp animated">
-                                    Hello, my name is Jorge. I am from Spain, where I took my Bachelor’s degree focused in agile methodologies, after which I moved to Sweden looking for a more challenging environment. Here I live in Stockholm after having been for two years in Gothenburg taking an MSc in Software Engineering.
+                                    Hello, my name is Jorge. I am from Spain, where I took my Bachelor’s degree focused in agile methodologies, after which I moved to Sweden looking for a more challenging environment. Here I live in Stockholm where I am responsible for Quizkampen for Android, after having been for two years in Gothenburg taking an MSc in Software Engineering from Chalmers.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    In technical terms, I am deeply specialised in Java, with strong knowledge of the Android framework. Speaking of the later, I have developed three apps that can be found on Google Play (and the REST API that one of them requires), developed a guideline to implement scrolling synchronization between two RecyclerView components in Android (it can also be found in Google Play) and made important contributions, like a complex Gradle setup and WebDAV copy-paste functionality to a commercial one (ownCloud) with more than 100k installs.
+                                    I am deeply specialised in Java, with strong knowledge of the Android framework. Speaking of the later, I have developed several apps (admittedly not masterpieces, but have they teached me a lot), some of which can be found on Google Play and made important contributions, like a from-scratch Gradle setup and WebDAV copy-paste functionality to a commercial one (ownCloud) with more than 100k installs. As for development support tools, I have experience with both SVN and Git for SCM and Travis and some Jenkins for CI.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    On the desktop side, I have developed two distributed suites using JS, PHP, HTML5 and Java, and some years ago I managed to break through the WhatsApp communication protocol and wrote a Java desktop client out of it.
+                                    In less technical terms, I am a person who feels more comfortable when along others -both in and out of the office. Also, I recently got my PSM I certification and I like to read the Spotify Labs blog from time to time, specially the posts about the process particularities, they're really interesting and I think it's pretty cool you're so open about it.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    As for development support tools, I have experience with both SVN and Git, Mockito and JUnit in what refers to testing, and Travis for CI. I believe this and my curiosity and fast-learning skills make me a good match. Hopefully you will agree! Please do not hesitate to contact me back for any questions or further talk.
+                                    I'm attaching my CV and, as it can be read, I'm not completely new to either Java or Android in particular, but I know that there's still some concepts to be learnt, and taking into account that I use both Spotify for Linux and for Android pretty much 24/7, getting to develop my skills while at the same time improving amazing software that I genuily enjoy using would be so amazing that it's hard to describe.
                                 </p>
                                 <h5 class="wow fadeInUp animated">
-                              <strong>
-                              Sincerely,
-                              </strong>
-                              <br>
-                              <div class="name wow fadeInUp animated">
-                                 Jorge Antonio Diaz-Benito Soriano
-                              </div>
-                           </h5>
+      <strong>
+      Thanks a lot for the opportunity,
+      </strong>
+      <br>
+      <div class="name wow fadeInUp animated">
+         Jorge Antonio Diaz-Benito Soriano
+      </div>
+   </h5>
                             </div>
                         </div>
                     </div>
