Name-drop Farzan

--- a/coverletter.html
+++ b/coverletter.html
@@ -115,7 +115,7 @@
                                     In less technical terms, I am a person who feels more comfortable when along others -both in and out of the office. Also, I recently got my PSM I certification and I like to read the Spotify Labs blog from time to time, specially the posts about the process particularities, they're really interesting and I think it's pretty cool you're so open about it.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    I'm attaching my CV and, as it can be read, I'm not completely new to either Java or Android in particular, but I know that there's still some concepts to be learnt, and taking into account that I use both Spotify for Linux and for Android pretty much 24/7, getting to develop my skills while at the same time improving amazing software that I genuily enjoy using would be so amazing that it's hard to describe.
+                                    I've been using Spotify since I first had access to the Internet, both for Linux and for Android. Recently Farzan Zand (QA in the Stockholm office) suggested that I would be a very good match for this position and, given my passion about Spotify, suggested me to apply. I'm attaching my CV and, as it can be read, I'm not completely new to either Java or Android in particular, but I know that there are still some concepts to be learnt, getting to do so while at the same time improving amazing software that I genuily enjoy using would be so amazing that it's impossible to describe.
                                 </p>
                                 <h5 class="wow fadeInUp animated">
       <strong>
