--- a/coverletter.html
+++ b/coverletter.html
@@ -106,20 +106,20 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="wow fadeInUp animated">
-                                    Hello, my name is Jorge. I am from Spain, where I took my Bachelor’s degree focused in agile methodologies, after which I moved to Sweden looking for a more challenging environment. Here I live in Stockholm where I am responsible for Quizkampen for Android, after having been for two years in Gothenburg taking an MSc in Software Engineering from Chalmers.
+                                    Hello, my name is Jorge. I am from Spain, where I took my Bachelor’s degree focused in Agile methodologies, after which I moved to Sweden looking for a more challenging environment. Here I live in Stockholm where I am responsible for <b>Quizkampen</b> for Android, after having been for two years in Gothenburg taking an MSc in Software Engineering in Chalmers.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    I am deeply specialised in Java, with particular interest in the Android framework. Speaking of the later, I have developed several apps (admittedly not masterpieces, but they have teached me a lot), some of which can be found on Google Play and made important contributions, like a from-scratch Gradle setup and WebDAV copy-paste functionality to a commercial one (ownCloud) with more than 100k installs. As for development support tools, I have experience with both SVN and Git for SCM and Travis and a bit Jenkins for CI.
+                                    Programming-wise I am mostly focused in Android. I have developed several apps for the sake of learning, some of which can be found on Google Play (and all of them in GitHub), and made important contributions, like a from-scratch Gradle setup and WebDAV copy-paste functionality to a commercial one (ownCloud) with more than 100k installs. At the time of writing, I am developing another app and also have pull requests opened against <b>LeakCanary</b> and Twitter's <b>MoPub SDK for Android</b>. Overall, I like to stay active in the open-source community; it helps keeping my sills fresh.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    In less technical terms, I am a person who feels more comfortable when along others - both inside and outside of the office. Also, I recently got my PSM I certification and I like to read the Spotify Labs blog from time to time, specially the posts about process particularities: they are really interesting and I think it's pretty cool you are open about it.
+                                    In less technical terms, I am a person who feels more comfortable when along others - both inside and outside of the office. Also, I recently got my PSM I certification and I like to read the Spotify Labs blog from time to time, specially the posts about process particularities: they are really interesting and I think it's pretty good that you are open about them.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    I've been using Spotify since I first had access to the Internet, both for Linux and for Android. Recently Farzan Zand (QA in the Stockholm office) suggested that I would be a very good match for this position and, given my passion about Spotify, suggested me to apply. I'm attaching my CV and, as it can be read, I'm not completely new to either Java or Android, but I know that there are still some concepts to be learnt, and doing so while at the same time improving amazing software that I genuily enjoy using would be so amazing that it's impossible to describe.
+                                    I've been using Spotify since I first had access to the Internet, so it would be really awesome to join the band and help taking music streaming to the next level, once again.
                                 </p>
                                 <h5 class="wow fadeInUp animated">
       <strong>
-      Thanks a lot for the opportunity,
+      Thanks a lot for the opportunity!
       </strong>
       <br>
       <div class="name wow fadeInUp animated">
@@ -142,7 +142,7 @@
     End goto top -->
     <!-- Jquery library-->
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-    <!-- Bootstra jquery -->
+    <!-- Bootstrap jquery -->
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <!-- Other jquery -->
     <script type="text/javascript" src="js/common.js"></script>
