Update styles to Opera

--- a/coverletter.html
+++ b/coverletter.html
@@ -119,7 +119,7 @@
                                 </p>
                                 <h5 class="wow fadeInUp animated">
       <strong>
-      Thanks a lot for the opportunity,
+      Thanks for the opportunity,
       </strong>
       <br>
       <div class="name wow fadeInUp animated">
