--- a/coverletter.html
+++ b/coverletter.html
@@ -115,7 +115,7 @@
                                     In less technical terms, I am a person who feels more comfortable when along others - both inside and outside of the office. Also, I recently got my PSM I certification and I am preparing the PSM II assessment.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    As of now I have been taking care of the native apps at my company for a few months, which has been an enjoyable challenge, but I have not made myself to the city overall and I'm looking to come back to Gothenburg, and to do so by contributing to one of the major browsers is a chance that I do not want to miss.
+                                    As of now I have been taking care of the native apps at my company for a few months, which has been an enjoyable challenge, but I'm looking to move to a more mature environment with higher quality standards, and given the experience acquired during my current job, I think I could fit very well in MAG.
                                 </p>
                                 <h5 class="wow fadeInUp animated">
       <strong>
