--- a/coverletter.html
+++ b/coverletter.html
@@ -109,13 +109,13 @@
                                     Hello, my name is Jorge. I am from Spain, where I took my Bachelor’s degree focused in agile methodologies, after which I moved to Sweden looking for a more challenging environment. Here I live in Stockholm where I am responsible for Quizkampen for Android, after having been for two years in Gothenburg taking an MSc in Software Engineering from Chalmers.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    Programming-wise I am deeply specialised in the Android framework. Speaking of the later, I have developed several apps, which are admittedly not masterpieces (except the last one, that one I am pretty proud of), but have teached me a lot, some of which can be found on Google Play and made important contributions, like a from-scratch Gradle setup and WebDAV copy-paste functionality to a commercial one (ownCloud). As for development support tools, I have experience with both SVN and Git for SCM and Travis and Jenkins for CI.
+                                    Programming-wise I am deeply specialised in the Android framework. I have developed several apps, which are admittedly not masterpieces (except the last one, that one I am pretty proud of), but have teached me a lot, some of which can be found on Google Play and made important contributions, like a from-scratch Gradle setup and WebDAV copy-paste functionality to a commercial one (ownCloud). As for development support tools, I have experience with both SVN and Git for SCM and Travis and Jenkins for CI.
                                 </p>
                                 <p class="wow fadeInUp animated">
                                     In less technical terms, I am a person who feels more comfortable when along others - both inside and outside of the office. Also, I recently got my PSM I certification and I am preparing the PSM II assessment.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    As of now I have been taking care of the native apps at my company for a few months, which has been an enjoyable challenge, but I'm looking to move to a more mature environment with higher quality standards, and given the experience acquired during my current job, I think I could fit very well in MAG.
+                                    In my company I have been taking care of the native apps for a few months, which has been an enjoyable challenge, but now I am looking to make a long-term commitment to a more mature environment with higher quality standards, and a large group like Schibsted with widely known products fullfills this criteria very well.
                                 </p>
                                 <h5 class="wow fadeInUp animated">
       <strong>
